minor fixes to alignment and structure

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,19 +20,18 @@ $border-width: 24px;
   box-sizing: border-box;
 }
 
-html {
+html, body {
+  font-family: 'Public Sans', sans-serif;
   font-size: 18px;
+
+  overflow-x: hidden;
 }
 
 body {
-  font-family: 'Public Sans', sans-serif;
-
   display: flex;
   flex-flow: column nowrap;
   margin: 0;
   padding: 0;
-
-  overflow-x: hidden;
 
   &.hide-overflow {
     overflow: hidden;
@@ -314,8 +313,7 @@ header {
     grid-area: 1 / 1 / 2 / 2;
     justify-content: center;
     margin: 0 0 0 auto;
-    padding: 0;
-    padding-left: $border-width;
+    padding: 0 0 0 $border-width;
     max-width: calc(#{$max-width} / 2);
 
     @media (max-width: $breakpoint--tablet) {
@@ -323,6 +321,7 @@ header {
       grid-area: 2 / 1 / 3 / 2;
       justify-content: flex-end;
       margin: 0 auto;
+      padding: 0;
     }
 
     h1 {
@@ -546,7 +545,7 @@ header {
           text-decoration: none;
         }
 
-        h1 {
+        h2 {
           color: $color-background;
           font-size: 0.889rem;
           font-weight: 300;
